tests/ui/privacy/private-item-simple.rs
mod a {
    fn f() {}
}

fn main() {
    a::f(); //~ ERROR function `f` is private
}
